--- a/package.json
+++ b/package.json
@@ -8,16 +8,17 @@
     "preview": "vite preview"
   },
   "devDependencies": {
-    "typescript": "^4.5.4",
-    "vite": "^2.9.0",
     "@typescript-eslint/eslint-plugin": "^5.16.0",
     "@typescript-eslint/parser": "^5.16.0",
     "eslint": "^8.11.0",
     "eslint-plugin-import": "^2.25.4",
-    "eslint-plugin-jsx-a11y": "^6.5.1"
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "typescript": "^4.5.4",
+    "vite": "^2.9.0"
   },
   "dependencies": {
     "aphrodite": "^2.4.0",
-    "normalize.css": "^8.0.1"
+    "normalize.css": "^8.0.1",
+    "yaml": "^1.10.2"
   }
 }
